--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,14 @@
 {
-  "name": "jiyis/laravel-nsq",
+  "name": "joaoluizjoaquim/laravel-nsq",
   "description": "Nsq driver for Laravel Queue",
   "license": "MIT",
   "authors": [
     {
-      "name": "Gary F Dong",
-      "email": "425995717@qq.com"
+      "name": "João Joaquim"
     }
   ],
   "require": {
-    "php": ">=7.0",
+    "php": ">=7.1",
     "illuminate/database": "^5.1",
     "illuminate/support": "^5.1",
     "illuminate/queue": "^5.1"
