--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,15 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
-    "illuminate/database": "^5.1",
-    "illuminate/support": "^5.1",
-    "illuminate/queue": "^5.1"
+    "php": ">=7.2",
+    "illuminate/database": "^6.0",
+    "illuminate/support": "^6.0",
+    "illuminate/queue": "^6.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~7.0",
-    "illuminate/events": "^5.1",
-    "mockery/mockery": "~1.0"
+    "phpunit/phpunit": "^8.0",
+    "illuminate/events": "^6.0",
+    "mockery/mockery": "^1.2"
   },
   "suggest": {
     "ext-swoole": "Event-driven asynchronous & concurrent & coroutine networking engine with high performance for PHP."
