--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,9 @@
   ],
   "require": {
     "php": ">=7.2",
-    "illuminate/database": "^6.0",
-    "illuminate/support": "^6.0",
-    "illuminate/queue": "^6.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^8.0",
-    "illuminate/events": "^6.0",
-    "mockery/mockery": "^1.3"
-  },
-  "suggest": {
-    "ext-swoole": "Event-driven asynchronous & concurrent & coroutine networking engine with high performance for PHP."
+    "clue/socket-raw": "^1.5",
+    "illuminate/queue": "^6.0",
+    "illuminate/support": "^6.0"
   },
   "autoload": {
     "psr-4": {
